<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">adventurist</string>
    <string name="todo">TODO</string>
    <string name="let_us_discover_the_world">Let us discover the world</string>
    <string name="places">Places</string>
    <string name="hotels">Hotels</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_location">search Location...</string>
    <string name="your_user_name" translatable="false"> username: %1$s</string>
    <string name="textview">TextView</string>
    <string name="adventurist">Adventurist</string>
    <string name="welcome">Welcome</string>
    <string name="please_login_with_your_information">Please login with your information</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or_sign_up">Or Sign up</string>
    <string name="sign_up">Sign up</string>
    <string name="unlock_the_mystery_input_the_secret_code_to_unveil_the_magic">Unlock the mystery! Input the secret code to unveil the magic.</string>
    <string name="code">code</string>
    <string name="save_your_memories">Save Your Memories</string>
    <string name="nicename">NiceName</string>
    <string name="navigation_drawer_open">open navigation drawer</string>
    <string name="navigation_drawer_close">close navigation drawer</string>
    <string name="title_activity_google_maps">GoogleMapsActivity</string>
    <string name="mapsApi">AIzaSyBNR7_th2remU0Eb37Se16GME5ts3TuzcI</string>
    <string name="title_activity_google_map">googleMap</string>
    <string name="search_for_a_location">Search for a location</string>


    //Headings
    <string name="heading_one"> Advenurist</string>
    <string name="heading_two">Discover The World</string>
    <string name="heading_three">Discover The World</string>
    <string name="heading_fourth">Discover The World</string>

    //Description
    <string name="desc_one">Let\'s make memories and the best experience of each journey you make</string>
    <string name="desc_two">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="desc_three">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="desc_fourth">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="textview2">TextView2</string>

    <string name="PlanPage">Unlock a world of possibilities! Save your future plans with us and turn dreams into reality.</string>



</resources>