<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_sob7i"
    tools:context=".VerifyAccActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="280dp"
        android:layout_height="99dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/lato"
        android:text="@string/unlock_the_mystery_input_the_secret_code_to_unveil_the_magic"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/vertifyEmailEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintWidth_default="wrap" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="282dp"
        android:layout_height="276dp"
        android:layout_marginTop="108dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/verify" />

    <EditText
        android:id="@+id/verificationCodeEdit"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/border_textfield"
        android:ems="10"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:hint="@string/code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vertifyEmailEdit" />

    <EditText
        android:id="@+id/vertifyEmailEdit"
        android:layout_width="276dp"
        android:layout_height="54dp"
        android:layout_marginTop="176dp"
        android:background="@drawable/border_textfield"
        android:ems="10"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:hint="@string/email_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/verifySubmitButton"
        android:layout_width="148dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#00000000"
        android:text="Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verificationCodeEdit"
        app:layout_constraintVertical_bias="0.75" />
</androidx.constraintlayout.widget.ConstraintLayout>
